tests/ui/traits/const-traits/macro-const-trait-bound-theoretical-regression.stderr
error: ty
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:11:19
   |
LL |     ($ty:ty) => { compile_error!("ty"); }; // KEEP THIS RULE FIRST AND AS IS!
   |                   ^^^^^^^^^^^^^^^^^^^^
...
LL | demo! { impl const Trait }
   | -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `demo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: ty
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:11:19
   |
LL |     ($ty:ty) => { compile_error!("ty"); }; // KEEP THIS RULE FIRST AND AS IS!
   |                   ^^^^^^^^^^^^^^^^^^^^
...
LL | demo! { dyn const Trait }
   | ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `demo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: ty
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:11:19
   |
LL |     ($ty:ty) => { compile_error!("ty"); }; // KEEP THIS RULE FIRST AND AS IS!
   |                   ^^^^^^^^^^^^^^^^^^^^
...
LL | demo! { impl [const] Trait }
   | ---------------------------- in this macro invocation
   |
   = note: this error originates in the macro `demo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: ty
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:11:19
   |
LL |     ($ty:ty) => { compile_error!("ty"); }; // KEEP THIS RULE FIRST AND AS IS!
   |                   ^^^^^^^^^^^^^^^^^^^^
...
LL | demo! { dyn [const] Trait }
   | --------------------------- in this macro invocation
   |
   = note: this error originates in the macro `demo` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0658]: const trait impls are experimental
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:26:14
   |
LL | demo! { impl const Trait }
   |              ^^^^^
   |
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const trait impls are experimental
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:27:13
   |
LL | demo! { dyn const Trait }
   |             ^^^^^
   |
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const trait impls are experimental
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:29:14
   |
LL | demo! { impl [const] Trait }
   |              ^^^^^^^
   |
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const trait impls are experimental
  --> $DIR/macro-const-trait-bound-theoretical-regression.rs:30:13
   |
LL | demo! { dyn [const] Trait }
   |             ^^^^^^^
   |
   = note: see issue #143874 <https://github.com/rust-lang/rust/issues/143874> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0658`.
